# yl-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.MD
include/: ast.h  cfg.h  codegen.h  constexpr.h  lexer.h  parser.h  sema.h  utils.h
src/: ast.cpp  cfg.cpp  codegen.cpp  constexpr.cpp  lexer.cpp  main.cpp  parser.cpp  sema.cpp  utils.cpp
test/: .lit_test_times.txt
test/cfg/: arguments.yl  assignment.yl  condition.yl  empty_fn.yl  if_statement.yl  return.yl  return_in_cond.yl  while.yl
test/codegen/: alloca_order.yl  cond_binop_side_effect.yl  cond_binop_side_effect_min.yl  condition_empty_merge.yl  constexpr.yl  expressions.yl  if_conditional_binop_condition.yl  lazy_init_variable.yl  main_wrapper.yl  module_setup.yl  multiple_return.yl  multiple_return_if.yl  multiple_return_while.yl  println.yl  return.yl  unary_negate.yl  while_empty_exit.yl  while_empty_exit_ret.yl
test/constexpr/: args.yl  grouping.yl  ops.yl  special_cases.yl  vars.yl
test/parser/: assignment.yl  binop.yl  block.yl  comment_ends_of_eof.yl  comment_ends_on_eof.yl  decl_stmt.yl  error_parsing_else_block.yl  error_parsing_if_block.yl  error_parsing_while_block.yl  error_recovery_block.yl  error_recovery_eof.yl  error_recovery_fn.yl  error_recovery_inside_block.yl  error_recovery_semi.yl  function_decl.yl  if.yl  missing_semi.yl  no_main_function.yl  parameter_list.yl  prefix.yl  primary.yl  return.yl  semi.yl  top_level.yl  while.yl
test/sema/: assignment.yl  binary.yl  builtin_print.yl  builtin_print_fn_name_collision.yl  call.yl  declref.yl  function.yl  if.yl  lazy_init.yl  main.yl  main_redeclared.yl  non_void_main.yl  param.yl  redeclaration.yl  resolution_error.yl  return.yl  return_on_every_branch.yl  shadowing.yl  type_inference.yl  type_inference_error.yl  uknown_type_fn.yl  uknown_type_var.yl  unary.yl  unreachable_stmt.yl  var_decl.yl  while.yl
